--- a/portfolio.html
+++ b/portfolio.html
@@ -1,61 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="google-site-verification" content="ug9kBj3TFZKcyxyR2H4Slhvee898HY39bISGiVp8IBo" />
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Portraits Portfolio — Oil Paintings & Commissions | Annabel Fox</title>
-    <meta name="description" content="Browse oil portrait paintings and commission examples by London artist Annabel Fox.">
-    <link rel="canonical" href="https://annabelfox.co.uk/portfolio">
-  
-    <!-- Favicons -->
-    <link rel="icon" href="/favicon.ico">
-    <link rel="icon" type="image/png" sizes="192x192" href="/icon-192.png">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-    <meta name="theme-color" content="#ffffff">
-  
-    <!-- Open Graph / Twitter -->
-    <meta property="og:site_name" content="Annabel Fox — Portrait Artist">
-    <meta property="og:title" content="Portraits Portfolio — Oil Paintings & Commissions">
-    <meta property="og:description" content="See recent oil portraits and commission work by Annabel Fox.">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://annabelfox.co.uk/portfolio">
-    <meta property="og:image" content="https://annabelfox.co.uk/images/Friends_in_a_boat_painting_1600.jpg">
-    <meta property="og:image:alt" content="Selected oil portraits by Annabel Fox">
-    <meta name="twitter:card" content="summary_large_image">
-  
-    <link rel="stylesheet" href="style.css">
-    <script src="app.js" defer></script>
-  
-    <!-- JSON-LD: Breadcrumb + CollectionPage -->
-    <script type="application/ld+json">
-    {
-      "@context":"https://schema.org",
-      "@graph":[
-        {
-          "@type":"BreadcrumbList",
+  <meta name="google-site-verification" content="ug9kBj3TFZKcyxyR2H4Slhvee898HY39bISGiVp8IBo" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+
+  <title>Portraits Portfolio — Oil Paintings & Commissions | Annabel Fox</title>
+  <meta name="description" content="Browse oil portrait paintings and commission examples by London artist Annabel Fox.">
+  <link rel="canonical" href="https://annabelfox.co.uk/portfolio.html">
+
+  <!-- Favicons -->
+  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" type="image/png" sizes="192x192" href="/icon-192.png">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+  <meta name="theme-color" content="#ffffff">
+
+  <!-- Open Graph / Twitter -->
+  <meta property="og:site_name" content="Annabel Fox — Portrait Artist">
+  <meta property="og:title" content="Portraits Portfolio — Oil Paintings & Commissions">
+  <meta property="og:description" content="See recent oil portraits and commission work by Annabel Fox.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://annabelfox.co.uk/portfolio.html">
+  <meta property="og:image" content="https://annabelfox.co.uk/images/Friends_in_a_boat_painting_1600.jpg">
+  <meta property="og:image:alt" content="Selected oil portraits by Annabel Fox">
+  <meta name="twitter:card" content="summary_large_image">
+
+  <link rel="stylesheet" href="style.css">
+  <script src="app.js" defer></script>
+
+  <!-- JSON-LD: Breadcrumb + CollectionPage -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@graph":[
+      {
+        "@type":"BreadcrumbList",
+        "itemListElement":[
+          {"@type":"ListItem","position":1,"name":"Home","item":"https://annabelfox.co.uk/"},
+          {"@type":"ListItem","position":2,"name":"Portfolio","item":"https://annabelfox.co.uk/portfolio.html"}
+        ]
+      },
+      {
+        "@type":"CollectionPage",
+        "name":"Portraits Portfolio",
+        "url":"https://annabelfox.co.uk/portfolio.html",
+        "mainEntity":{
+          "@type":"ItemList",
           "itemListElement":[
-            {"@type":"ListItem","position":1,"name":"Home","item":"https://annabelfox.github.io/"},
-            {"@type":"ListItem","position":2,"name":"Portfolio","item":"https://annabelfox.github.io/portfolio.html"}
+            {"@type":"ImageObject","contentUrl":"https://annabelfox.co.uk/images/Friends_in_a_boat_painting_1600.jpg","caption":"Friends on the water"},
+            {"@type":"ImageObject","contentUrl":"https://annabelfox.co.uk/images/Girl_with_brown_hair_painting_1600.jpg","caption":"Portrait of my younger sister"},
+            {"@type":"ImageObject","contentUrl":"https://annabelfox.co.uk/images/Painting_of_a_boy_smiling_1600.jpg","caption":"Commissioned portrait of Angus"}
           ]
-        },
-        {
-          "@type":"CollectionPage",
-          "name":"Portraits Portfolio",
-          "url":"https://annabelfox.github.io/portfolio.html",
-          "mainEntity":{
-            "@type":"ItemList",
-            "itemListElement":[
-              {"@type":"ImageObject","contentUrl":"https://annabelfox.github.io/Friends_in_a_boat_painting_1600.jpg","caption":"Friends on the water"},
-              {"@type":"ImageObject","contentUrl":"https://annabelfox.github.io/Girl_with_brown_hair_painting_1600.jpg","caption":"Portrait of my younger sister"},
-              {"@type":"ImageObject","contentUrl":"https://annabelfox.github.io/Painting_of_a_boy_smiling_1600.jpg","caption":"Commissioned portrait of Angus"}
-            ]
-          }
         }
-      ]
-    }
-    </script>
-  </head>  
+      }
+    ]
+  }
+  </script>
+</head>  
 <body>
   <header id="mainheader" role="banner">
     <div id="logo" aria-hidden="true">Annabel Fox</div>
