--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
   
     <p>
       Annabel Fox is an award-winning portrait painter based in the UK. Painting from photos, Annabel works not only to capture a distinct likeness in her commissions, but the spirit and personality of the person (or people) she paints. 
-    Her process and affordable price points make commissioning a high-quality oil painting easy - perfect for busy families or art lovers who want to capture a moment in oil paint on a budget. 
+    Her process and affordable price points make commissioning a high-quality oil painting easy. 
     </p>
     <p>
       Whether you’re marking a birthday or anniversary with a thoughtful present, or simply want a hand-painted portrait of family or friends for your own walls at home, Annabel will turn your favourite photo into a beautiful oil painting to be cherished for years to come.
