--- a/about.html
+++ b/about.html
@@ -125,7 +125,7 @@
               Drawn to portraits that tell a story, Annabel often paints from photographs that capture a moment or memory - a fascination that began with old family albums and photos of her parents from the 1990s. Working in oils on canvas, she begins each piece with a careful underpainting, layering colour to create warmth and depth.
             </p>
             <p>
-               Since starting to take commissions in 2020, she has painted adults, children and teenagers for clients across England. Having grown up in Japan and Hong Kong before returning to the UK in 2019, Annabel now lives in London and continues to accept portrait commissions nationwide.</p>
+               Whilst Annabel grew up in Japan and Hong Kong, she returned to the UK in 2019, and now lives in London. Since starting to take commissions in 2020, she has painted adults, children and teenagers for clients across England.</p>
           <p>For commission enquiries, please use the 
             <a href="contact.html">contact form</a>.
           </p>
