--- a/about.html
+++ b/about.html
@@ -56,6 +56,15 @@
   }
   </script>
 </head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F10LJ2Y1G3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-F10LJ2Y1G3');
+</script>
 <body>
   <header id="mainheader" role="banner">
     <div id="logo" aria-hidden="true">Annabel Fox</div>
