--- a/commission.html
+++ b/commission.html
@@ -81,6 +81,15 @@
     .price-note{margin:.25rem 0 0;font-size:.85rem;}
   </style>
 </head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F10LJ2Y1G3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-F10LJ2Y1G3');
+</script>
 <body>
   <header id="mainheader" role="banner">
     <div id="logo" aria-hidden="true">Annabel Fox</div>
